--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
-    "type": "project",
-    "license": "proprietary",
+    "name": "skunka/maker-bundle",
+    "type": "symfony-bundle",
+    "description": "An extension to maker bundle to create accessible web page designed with bootstrap and powered by stimulus",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Skunka",
+            "email": "sorry@yopmail.com"
+        }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
@@ -11,10 +19,9 @@
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/maker-bundle": "^1.43",
         "symfony/runtime": "6.1.*",
         "symfony/yaml": "6.1.*"
-    },
-    "require-dev": {
     },
     "config": {
         "allow-plugins": {
@@ -30,12 +37,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\MakerBundle\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\MakerBundle\\": "tests/"
         }
     },
     "replace": {
