--- a/composer.json
+++ b/composer.json
@@ -33,16 +33,19 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.1.8"
+        }
     },
     "autoload": {
         "psr-4": {
-            "App\\MakerBundle\\": "src/"
+            "Skunka\\MakerBundle\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\MakerBundle\\": "tests/"
+            "Skunka\\MakerBundle\\": "tests/"
         }
     },
     "replace": {
